--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -1,1 +1,7 @@
-
+## HOME - INTRO
+* React là một thư viện của JS
+* React dùng để build single-page application
+* React dcho phép tái sử dụng UI component
+* React tạo ra DOM ảo ở bộ nhớ: thay vì thao tác trực tieepps trên trình duyệt, react tạo ra DOM ảo trong bộ nhớ, thực hiện tất cả thao tác cần thiết, trước tkhi thực hiện thay đỏi trong DOM của trình duyệt => React chỉ thay đổi những thứ cần thay đổi
+## GET STARTED
+### React trực tiếp trong HTML
