--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -4,4 +4,30 @@
 * React dcho phép tái sử dụng UI component
 * React tạo ra DOM ảo ở bộ nhớ: thay vì thao tác trực tieepps trên trình duyệt, react tạo ra DOM ảo trong bộ nhớ, thực hiện tất cả thao tác cần thiết, trước tkhi thực hiện thay đỏi trong DOM của trình duyệt => React chỉ thay đổi những thứ cần thay đổi
 ## GET STARTED
-### React trực tiếp trong HTML
+`npx create-react-app my-react-app`, `cd my-react-app`, `npm start`
+## REACT ES6
+### 1. Class
+```
+class Car {
+//contructor
+  constructor(name) {
+    this.brand = name;
+  }
+//method
+  present() {
+    return 'I have a ' + this.brand;
+  }
+}
+//inheritance
+class Model extends Car {
+  constructor(name, mod) {
+    super(name);
+    this.model = mod;
+  }  
+  show() {
+      return this.present() + ', it is a ' + this.model
+  }
+}
+const mycar = new Model("Ford", "Mustang");
+mycar.show();
+```
