--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -31,3 +31,6 @@ class Model extends Car {
 const mycar = new Model("Ford", "Mustang");
 mycar.show();
 ```
+### 2. Arrow Functions 
+* Regular function: this đại diện cho đối tượng được gọi là hàm
+* Arrow function: this đại diện cho đối tượng header bất kể ai đã gọi hàm
