--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -34,3 +34,72 @@ mycar.show();
 ### 2. Arrow Functions 
 * Regular function: this đại diện cho đối tượng được gọi là hàm
 * Arrow function: this đại diện cho đối tượng header bất kể ai đã gọi hàm
+### 3. Variable
+* var has a function scope, not a block scope.
+* let has a block scope.
+* const has a block scope.
+### 4. Array Methods
+* map() ; run hàm cho mỗi element => trả về một mảng mới
+### 5. Destructuring (phá hủy cấu trúc và gán giá trị cho biến)
+* Destructing Arrays
+  ```
+  const vehicles = ['mustang', 'f-150', 'expedition'];
+  const [car, truck, suv] = vehicles;
+  ```
+  ```
+  //detructuring có ích khi hàm trả vè một mảng
+  function calculate(a, b) {
+  const add = a + b;
+  const subtract = a - b;
+  const multiply = a * b;
+  const divide = a / b;
+
+  return [add, subtract, multiply, divide];
+  }
+
+  const [add, subtract, multiply, divide] = calculate(4, 7);
+  ```
+  ```
+  const vehicleOne = {
+  brand: 'Ford',
+  model: 'Mustang',
+  type: 'car',
+  year: 2021, 
+  color: 'red'
+  }
+
+  myVehicle(vehicleOne);
+
+  function myVehicle({type, color, brand, model}) {
+    const message = 'My ' + type + ' is a ' + color + ' ' + brand + ' ' + model + '.';
+  }
+  ```
+* Destructing Objects  
+### 6. Spread Operator (rải một phần tử của một mảng hoặc đối tượng hiện có vào một mảng hoặc đối tượng khác)
+```
+const numbersOne = [1, 2, 3];
+const numbersTwo = [4, 5, 6];
+const numbersCombined = [...numbersOne, ...numbersTwo];
+```
+```
+//spead operator thường dùng kết hợp với detructuring
+const numbers = [1, 2, 3, 4, 5, 6];
+
+const [one, two, ...rest] = numbers;
+```
+```
+const myVehicle = {
+  brand: 'Ford',
+  model: 'Mustang',
+  color: 'red'
+}
+
+const updateMyVehicle = {
+  type: 'car',
+  year: 2021, 
+  color: 'yellow'
+}
+
+const myUpdatedVehicle = {...myVehicle, ...updateMyVehicle}
+```
+
