--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -102,4 +102,32 @@ const updateMyVehicle = {
 
 const myUpdatedVehicle = {...myVehicle, ...updateMyVehicle}
 ```
+## ES6 MODULES
+### Modules
+* cho phép chia nhỏ mã thành những file riêng biệt 
+* ES module dựa trên các câu lệnh `import` và `export`
+### Export (2 loại: Named và Default)
+* Named Exports
+  ```
+  //export từng dùng riêng lẻ
+  export const name = "Jesse"
+  export const age = "40"
+  ```
+  ```
+  //export một lần vào cuối cùng
+  const name = "Jesse"
+  const age = "40"
 
+  export { name, age }
+  ```
+* Default Exports (chỉ có thể export default một lần duy nhất ở tỏng file)
+  ```
+  const message = () => {
+    const name = "Jesse";
+    const age = "40";
+    return name + ' is ' + age + 'years old.';
+  };
+
+  export default message;
+  ```
+ 
