--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -102,11 +102,11 @@ const updateMyVehicle = {
 
 const myUpdatedVehicle = {...myVehicle, ...updateMyVehicle}
 ```
-## ES6 MODULES
-### Modules
+### 7. ES6 MODULES
+#### Modules
 * cho phép chia nhỏ mã thành những file riêng biệt 
 * ES module dựa trên các câu lệnh `import` và `export`
-### Export (2 loại: Named và Default)
+#### Export (2 loại: Named và Default)
 * Named Exports
   ```
   //export từng dùng riêng lẻ
@@ -130,4 +130,11 @@ const myUpdatedVehicle = {...myVehicle, ...updateMyVehicle}
 
   export default message;
   ```
- 
+#### Import (2 loại: Named và Default)
+```
+import { name, age } from "./person.js";
+```
+```
+import message from "./message.js";
+```
+### 8. Ternary Operator
