--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -137,4 +137,61 @@ import { name, age } from "./person.js";
 ```
 import message from "./message.js";
 ```
-### 8. Ternary Operator
+### 8. Ternary Operator (toán tử 3 ngôi)
+## RENDER HTML
+* Hiển thị HTML bằng hàm `ReactDOM.render()` </br>
+* ReactDOM.render() có hay đối số: HTML code và HTML element
+* `public/index.html` đây là file gốc có 1 div diy nhất là nơi ứng dụng react sẽ được render ra
+## REACT JSX
+* JSX là viết tắt của JavaScript XML, cho phép viết thẻ HTML bên trong javascript code và đặt chúng trong DOM
+* JSX convert thẻ HTML thành react elements
+```
+//với JSX
+const myelement = <h1>I Love JSX!</h1>;
+
+ReactDOM.render(myelement, document.getElementById('root'));
+```
+### Expressions in JSX (biểu thức trong JSX) - viết trong dấu ngoặc nhọn {}
+```
+//execute the expression 5 + 5
+const myelement = <h1>React is {5 + 5} times better with JSX</h1>;
+```
+### Attribute class = className
+```
+const myelement = <h1 className="myclass">Hello World</h1>;
+```
+## REACT COMPONENTS
+Các compoonent giống như các hàm trả về các phần tử HTML. </br>
+Có hai loại **Function components** và **Class components**
+### Create Your First Component
+```
+//Class Component
+class Car extends React.Component {
+  render() {
+    return <h2>Hi, I am a Car!</h2>;
+  }
+}
+```
+```
+//Function Component
+function Car() {
+  return <h2>Hi, I am a Car!</h2>;
+}
+```
+### Props
+```
+function Car(props) {
+  return <h2>I am a {props.color} Car!</h2>;
+}
+
+ReactDOM.render(<Car color="red"/>, document.getElementById('root'));
+```
+## CLASS COMPONENT
+```
+class Car extends React.Component {
+  render() {
+    return <h2>Hi, I am a Car!</h2>;
+  }
+}
+```
+### Constructor
