--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -195,3 +195,115 @@ class Car extends React.Component {
 }
 ```
 ### Constructor
+Được gọi khi component được khỏi tạo. </br>
+Dùng đẻ khởi tạo các thuộc tính của component. </br>
+Thuộc tính của component nên được giữ trong một đối tượng gọi là `state` </br>
+```
+class Car extends React.Component {
+  constructor() {
+    super();
+    this.state = {color: "red"};
+  }
+  render() {
+    return <h2>I am a {this.state.color} Car!</h2>;
+  }
+}
+```
+### Props in the Constructor
+Nếu component có hàm tạo thì props luôn được pass cho contructor và cả React.Component thông qua phương thức super </br>
+```
+class Car extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+  render() {
+    return <h2>I am a {this.props.model}!</h2>;
+  }
+}
+
+ReactDOM.render(<Car model="Mustang"/>, document.getElementById('root'));
+```
+### State Object
+```
+//create state object
+class Car extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      brand: "Ford",
+      model: "Mustang",
+      color: "red",
+      year: 1964
+    };
+  }
+  render() {
+    return (
+      <div>
+        <h1>My Car</h1>
+      </div>
+    );
+  }
+}
+```
+```
+//using state object
+class Car extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      brand: "Ford",
+      model: "Mustang",
+      color: "red",
+      year: 1964
+    };
+  }
+  render() {
+    return (
+      <div>
+        <h1>My {this.state.brand}</h1>
+        <p>
+          It is a {this.state.color}
+          {this.state.model}
+          from {this.state.year}.
+        </p>
+      </div>
+    );
+  }
+}
+```
+```
+//chage state object
+class Car extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      brand: "Ford",
+      model: "Mustang",
+      color: "red",
+      year: 1964
+    };
+  }
+  changeColor = () => {
+    this.setState({color: "blue"});
+  }
+  render() {
+    return (
+      <div>
+        <h1>My {this.state.brand}</h1>
+        <p>
+          It is a {this.state.color}
+          {this.state.model}
+          from {this.state.year}.
+        </p>
+        <button
+          type="button"
+          onClick={this.changeColor}
+        >Change color</button>
+      </div>
+    );
+  }
+}
+// dùng phương thức setState() để thay đổi state object => đảm bảo rằng nó đã được updated và gọi rander() 
+```
+### State Object
+
