--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -305,5 +305,6 @@ class Car extends React.Component {
 }
 // dùng phương thức setState() để thay đổi state object => đảm bảo rằng nó đã được updated và gọi rander() 
 ```
-### State Object
+### [Lifecycle of Components (Mounting, Updating, and Unmounting)](https://www.w3schools.com/REACT/react_class.asp)
+
 
