--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -306,5 +306,41 @@ class Car extends React.Component {
 // dùng phương thức setState() để thay đổi state object => đảm bảo rằng nó đã được updated và gọi rander() 
 ```
 ### [Lifecycle of Components (Mounting, Updating, and Unmounting)](https://www.w3schools.com/REACT/react_class.asp)
+## REACT EVENT
+### Adding Events
+onClick={shoot}  instead of onClick="shoot()" </BR>
+### Passing Arguments (dùng arrow function)
+```
+function Football() {
+  const shoot = (a) => {
+    alert(a);
+  }
 
+  return (
+    <button onClick={() => shoot("Goal!")}>Take the shot!</button>
+  );
+}
 
+ReactDOM.render(<Football />, document.getElementById('root'));
+```
+### React Event Object
+Event handlers có thể được truy cập đển React event trigger function </br>
+```
+function Football() {
+  const shoot = (a, b) => {
+    alert(b.type);
+    /*
+    'b' represents the React event that triggered the function,
+    in this case the 'click' event
+    */
+  }
+
+  return (
+    <button onClick={(event) => shoot("Goal!", event)}>Take the shot!</button>
+  );
+}
+
+ReactDOM.render(<Football />, document.getElementById('root'));
+```
+## REACT LISTS
+`map()` là phương thức được ưu tiên để lặp mảng
