--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -343,4 +343,24 @@ function Football() {
 ReactDOM.render(<Football />, document.getElementById('root'));
 ```
 ## REACT LISTS
-`map()` là phương thức được ưu tiên để lặp mảng
+`map()` là phương thức được ưu tiên để lặp mảng </br>
+```
+function Car(props) {
+  return <li>I am a { props.brand }</li>;
+}
+
+function Garage() {
+  const cars = ['Ford', 'BMW', 'Audi'];
+  return (
+    <>
+      <h1>Who lives in my garage?</h1>
+      <ul>
+        {cars.map((car) => <Car brand={car} />)}
+      </ul>
+    </>
+  );
+}
+
+ReactDOM.render(<Garage />, document.getElementById('root'));
+```
+## REACT FORM
