--- a/w3/1. Tutorial.md
+++ b/w3/1. Tutorial.md
@@ -364,3 +364,53 @@ function Garage() {
 ReactDOM.render(<Garage />, document.getElementById('root'));
 ```
 ## REACT FORM
+## REACT ROUTER
+`npm i -D react-router-dom` </br>
+```
+const Home = () => {
+  return <h1>Home</h1>;
+};
+
+export default Home;
+```
+```
+import ReactDOM from "react-dom";
+import { BrowserRouter as Router, Switch, Route, Link } from "react-router-dom";
+import Home from "./pages/Home";
+import Blogs from "./pages/Blogs";
+import Contact from "./pages/Contact";
+
+export default function App() {
+  return (
+    <Router>
+      <div>
+        <Link to="/">Home</Link>
+      </div>
+      <div>
+        <Link to="/blogs">Blog Articles</Link>
+      </div>
+      <div>
+        <Link to="/contact">Contact Me</Link>
+      </div>
+
+      <hr />
+        
+       //render route khớp với đường dẫn 
+      <Switch>
+        <Route exact path="/">
+          <Home />
+        </Route>
+        <Route path="/blogs">
+          <Blogs />
+        </Route>
+        <Route path="/contact">
+          <Contact />
+        </Route>
+      </Switch>
+    </Router>
+  );
+}
+
+ReactDOM.render(<App />, document.getElementById("root"));
+```
+
